--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,7 @@
     <color name="babymustard">#FFE252</color>
     <color name="babygray">#C5C5C5</color>
     <color name="almostblack">#1D1D1D</color>
+    <color name="yellow">#FFFF00</color>
+    <color name="letra">#C5C5C5</color>
+    <color name="grisclaro">#9E9E9E</color>
 </resources>
